[project]
name = "bot-test-gateway"
version = "0.1.0"
description = "High-performance FastAPI service for entity recognition using RabbitMQ RPC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",
    "aio-pika>=9.5.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "uvloop>=0.21.0",
    "httptools>=0.6.0",
    "prometheus-client>=0.21.0",
]


[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pre-commit==4.3.0",
    "ruff==0.13.2",
]
[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]


[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["model*", "tests*"]
